Major feature updates: playlist functionality, invitation system, QR codes, and UI improvements
- Added playlist functionality to play.php and memory_detail.php with original memory, submissions, and generated audio
- Implemented complete invitation system with email invitations, public recording, and submission management
- Added QR code generation and custom URL functionality for memories
- Fixed HTML entity encoding issues in playlist players
- Added CAPTCHA protection for invitation submissions
- Implemented email validation for private invitations
- Added memory statistics section (currently hidden)
- Updated navigation links and memory detail links
- Added comprehensive video advertisement script
- Fixed various UI and functionality issues
- Reverted pretty URLs implementation for stability
- Added proper error handling and validation throughout

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,6 @@ test-*.php
 # Firebase config (since we're using PHP to generate it dynamically)
 src/firebase-config.js
 sessions/
+
+# Generated QR codes
+qr_codes/
